2016-08-13 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Fixed Engset calculator. 

2015-11-08 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Fixed NOTE as CRAN checks has detected in the new version of R.

2015-05-15 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Fixed a bug in the CJN, Wk of MMInf server in the ExactMethod. It was written mu instead of 1/mu. Detected and fixed by Duncan Garmonsway (nacnudus at gmail.com). Thank you very much Duncan.

2015-04-11 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Some minor changes requested by CRAN.

2014-08-20 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Fixed an error on pdf explaining Wqq and Lqq.
    * Fixed notes as cran reported it.
    * Included a new method to get the M/M/c/c probabilities. It has been taken from [Kobayashi2012], pag. 709. It gets more probabilities that the exact method, and in lesser time than the approximate method. For large sites, it is the recomended method. All examples of M/M/c/c model has been changed to this way.
    * Variances has been included in the basic models. For models M/M/c/K, M/M/c/K/K and M/M/c/K/m, variances respect the time in system are not inluded. Nor the variance respect the waiting time has been calculated for M/M/c/K/m model.
    * To obtain the pn in the M/M/1/K model for high values of k and in case that lambda < mu, dgeom and pgeom has been used to speedup the process. In the case of lambda > mu, it persists the numerical overflow for high values of k.
    * FW for models M/M/c/K, M/M/c/K/m and M/M/c/K has been removed. FWq also has been removed for M/M/c/K/m.

2013-11-02 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Included a new method to get the M/M/1/K/K probabilities. It has been taken from [Kobayashi2012], pag. 709. It gets more probabilities that the exact method, and in lesser time than the approximate method. For large sites, it is the recomended method. All examples of M/M/1/K/K model has been changed to this way.