@@ -1,11 +1,11 @@
-bf73be96d2ffeb095fbef2f112a6718d *ChangeLog
-cab7c75f5a1e44831da9671356752fee *DESCRIPTION
-9b171d14be76d9998c8606da39ed60e4 *NAMESPACE
-23585ec03ec16013fcf913977b0199a5 *R/queueing.R
-0ca99f9f554bd37f5e8894cd8a1f763b *inst/CITATION
+e16eb45ef86377fac9d695a3fc5f1540 *ChangeLog
+a6f55a3df6fc07dde62e0d36c1498888 *DESCRIPTION
+0e9180f584c21cab0b848d25a30df93b *NAMESPACE
+0c7bf70d72efdfe3d7570b3385236263 *R/queueing.R
+2860e26391042d58421cef4d50ed7aaa *inst/CITATION
 c82af99b92167b693a5375260146a094 *inst/doc/Little_Law_When_Queue_Exists.pdf
 27be89fe075cf66e398cea1558d62e0d *inst/doc/index.html
-00b23f8756df71d831e447f277184c04 *man/B_erlang.Rd
+3116bc03ff5b664bdb49e0738c8b0cc3 *man/B_erlang.Rd
 ad3c13fa2a91e3c1bcf7cc452562e79f *man/C_erlang.Rd
 1a3bb2e17c23b4a273f7ffc29bb0c42a *man/CheckInput.Rd
 d50047fbb9440e5825acface651c65aa *man/CheckInput.i_CJN.Rd
